--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 <!-- TODO 5: Add a link to the project pages -->
 <h3>My Top 3 Favorite Movies</h3>
 <a href="./public/Phumi's Movie Review.html"><img src="./assets/images/canva movie reviw.png " width="200" alt="movie review picture"> <br>MY MOVIE REVIEW</a>
-<hr>
 <h3>My Anniversary invitation</h3>
 <a href="./public/anniversary invite.html"><img src="./assets/images/Pink Watercolor Happy Anniversary Folded Card.png" width="200" alt=""><br>Chech out my anniversary invitation project</a>
+<hr>
+<a href="./public/about.html">About Me</a>
+<a href="./public/contact.html">Contact Me</a>
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
